--- a/v4.1DreamTeam_Getting_Data.ipynb
+++ b/v4.1DreamTeam_Getting_Data.ipynb
@@ -1738,7 +1738,7 @@
     }
    ],
    "source": [
-    "# Eliminate Stablecoins\n",
+    "# Eliminate Stablecoins - Struggling syntax to retain Terra Luna in this dataframe @Lucas\n",
     "\n",
     "crypto_df_sorted_3 = crypto_df_sorted_2.loc[crypto_df_sorted_2['percent_change_90d'] < -1].copy()\n",
     "crypto_df_sorted_3.head(10)"
