--- a/ProjectFile.ipynb
+++ b/ProjectFile.ipynb
@@ -3280,7 +3280,7 @@
     }
    ],
    "source": [
-    "# Get DataFrame of Chosen Coins\n",
+    "# Get DataFrame of Coinset A\n",
     "adj_close_df = cn_close_price_dfer(coin_list)\n",
     "\n",
     "# Get DataFrame of Index/Indices\n",
@@ -3294,6 +3294,227 @@
     "concat_adj_close_df= concat_adj_close_df.dropna()\n",
     "display(concat_adj_close_df.head())\n",
     "display(concat_adj_close_df.tail())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 151,
+   "id": "2307f3eb-7cc1-4ed7-adce-d610b63b8fe8",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>CRV-USD</th>\n",
+       "      <th>LDO-USD</th>\n",
+       "      <th>ANC-USD</th>\n",
+       "      <th>CVX-USD</th>\n",
+       "      <th>MKR-USD</th>\n",
+       "      <th>SPCBDM-USD</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Date</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2021-05-18</th>\n",
+       "      <td>3.488</td>\n",
+       "      <td>4.056</td>\n",
+       "      <td>0.064</td>\n",
+       "      <td>9.079</td>\n",
+       "      <td>4657.817</td>\n",
+       "      <td>4508.390</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2021-05-19</th>\n",
+       "      <td>1.975</td>\n",
+       "      <td>2.436</td>\n",
+       "      <td>0.039</td>\n",
+       "      <td>6.164</td>\n",
+       "      <td>3510.677</td>\n",
+       "      <td>3743.390</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2021-05-20</th>\n",
+       "      <td>2.208</td>\n",
+       "      <td>3.161</td>\n",
+       "      <td>0.033</td>\n",
+       "      <td>7.308</td>\n",
+       "      <td>3956.245</td>\n",
+       "      <td>3876.760</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2021-05-21</th>\n",
+       "      <td>1.851</td>\n",
+       "      <td>2.217</td>\n",
+       "      <td>0.030</td>\n",
+       "      <td>5.780</td>\n",
+       "      <td>3116.383</td>\n",
+       "      <td>3354.100</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2021-05-24</th>\n",
+       "      <td>1.622</td>\n",
+       "      <td>2.368</td>\n",
+       "      <td>0.058</td>\n",
+       "      <td>6.411</td>\n",
+       "      <td>4176.241</td>\n",
+       "      <td>3672.130</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            CRV-USD  LDO-USD  ANC-USD  CVX-USD  MKR-USD  SPCBDM-USD\n",
+       "Date                                                               \n",
+       "2021-05-18    3.488    4.056    0.064    9.079 4657.817    4508.390\n",
+       "2021-05-19    1.975    2.436    0.039    6.164 3510.677    3743.390\n",
+       "2021-05-20    2.208    3.161    0.033    7.308 3956.245    3876.760\n",
+       "2021-05-21    1.851    2.217    0.030    5.780 3116.383    3354.100\n",
+       "2021-05-24    1.622    2.368    0.058    6.411 4176.241    3672.130"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>CRV-USD</th>\n",
+       "      <th>LDO-USD</th>\n",
+       "      <th>ANC-USD</th>\n",
+       "      <th>CVX-USD</th>\n",
+       "      <th>MKR-USD</th>\n",
+       "      <th>SPCBDM-USD</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Date</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2022-05-02</th>\n",
+       "      <td>2.105</td>\n",
+       "      <td>2.770</td>\n",
+       "      <td>0.023</td>\n",
+       "      <td>22.429</td>\n",
+       "      <td>1482.810</td>\n",
+       "      <td>3403.130</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2022-05-03</th>\n",
+       "      <td>2.156</td>\n",
+       "      <td>2.747</td>\n",
+       "      <td>0.023</td>\n",
+       "      <td>22.459</td>\n",
+       "      <td>1402.082</td>\n",
+       "      <td>3336.510</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2022-05-04</th>\n",
+       "      <td>2.604</td>\n",
+       "      <td>3.084</td>\n",
+       "      <td>0.024</td>\n",
+       "      <td>25.331</td>\n",
+       "      <td>1496.008</td>\n",
+       "      <td>3558.930</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2022-05-05</th>\n",
+       "      <td>2.457</td>\n",
+       "      <td>2.820</td>\n",
+       "      <td>0.022</td>\n",
+       "      <td>23.457</td>\n",
+       "      <td>1378.030</td>\n",
+       "      <td>3254.460</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2022-05-06</th>\n",
+       "      <td>2.301</td>\n",
+       "      <td>2.789</td>\n",
+       "      <td>0.022</td>\n",
+       "      <td>23.018</td>\n",
+       "      <td>1338.703</td>\n",
+       "      <td>3229.670</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            CRV-USD  LDO-USD  ANC-USD  CVX-USD  MKR-USD  SPCBDM-USD\n",
+       "Date                                                               \n",
+       "2022-05-02    2.105    2.770    0.023   22.429 1482.810    3403.130\n",
+       "2022-05-03    2.156    2.747    0.023   22.459 1402.082    3336.510\n",
+       "2022-05-04    2.604    3.084    0.024   25.331 1496.008    3558.930\n",
+       "2022-05-05    2.457    2.820    0.022   23.457 1378.030    3254.460\n",
+       "2022-05-06    2.301    2.789    0.022   23.018 1338.703    3229.670"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "# Get DataFrame of Coinset B\n",
+    "adj_close_df2 = cn_close_price_dfer(coin_list2)\n",
+    "\n",
+    "# Concatenate the coin and index dataframes into one df\n",
+    "concat_adj_close_df2 = pd.concat([adj_close_df2, spcbdm_indx], axis=1)\n",
+    "\n",
+    "concat_adj_close_df2= concat_adj_close_df2.dropna()\n",
+    "display(concat_adj_close_df2.head())\n",
+    "display(concat_adj_close_df2.tail())"
    ]
   },
   {
