--- a/ProjectFile.ipynb
+++ b/ProjectFile.ipynb
@@ -3816,7 +3816,7 @@
    ],
    "source": [
     "# Concatenate the Coin A and Coin B dataframes into one df\n",
-    "concat_adj_close_df3 = pd.concat([adj_close_df2, adj_close_df ], axis=1)\n",
+    "concat_adj_close_df3 = pd.concat([adj_close_df2, adj_close_df], axis=1)\n",
     "concat_adj_close_df3= concat_adj_close_df3.dropna()\n",
     "display(concat_adj_close_df3.head())\n",
     "display(concat_adj_close_df3.tail())"
@@ -4842,9 +4842,44 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "75993b61-9b2c-4daf-9418-157a29e10c75",
+   "metadata": {},
+   "source": [
+    "# For presentation \n",
+    "Based on the annualized standard deviation, which Coinset pose more risk than the SPCBDM?\n",
+    "\n",
+    "Based on the rolling metrics, does the risk of each portfolio increase at the same time that the risk of the SPCBDM increases?\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2058ecdb-f11e-40fd-94e5-1dd7056001d9",
+   "metadata": {},
+   "source": [
+    "# For Lucas\n",
+    "The dropna situation \n",
+    "\n",
+    "normalizing / unifying the data into a single variable (CoinsetA, CoinsetB)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "baf30630-f11d-4916-bea3-3dd5b1c2385a",
+   "metadata": {},
+   "source": [
+    "\n",
+    "# For david: \n",
+    "1.We need to normalize each coin set\n",
+    "\n",
+    "2.We need to consolidate them to act as a single line in a plot chart (ex: like an etf equal weight), so we can chart Coinset A/B vs index,\n",
+    "And coinset A+B vs index, and distribute weight\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "def61bee-45bf-4b98-8da9-347aedb617dd",
+   "id": "c25c1ff7-2387-4518-8d06-919b9525359e",
    "metadata": {},
    "outputs": [],
    "source": []
